--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,20 @@ Package: ical.utils
 Type: Package
 Title: Read and Create iCalendar Files
 Version: 0.1-0
-Date: 2019-10-26
+Date: 2019-10-28
 Authors@R: person("Enrico", "Schumann",
                   role  = c("aut", "cre"),
                   email = "es@enricoschumann.net",
                   comment = c(ORCID = "0000-0001-7601-6576"))
 Maintainer: Enrico Schumann <es@enricoschumann.net>
-Description: Utilities for handling ical data.
-             Written in pure R.
+Description: Utilities for handling ical data. The package is
+             written in pure R, with no strict dependencies
+             (package 'base64enc' is only needed if files have
+             attachments). The package maps iCalendar dates and
+             date-times to R's native 'Date' and 'POSIXct' classes.
+	     Recurring items can be expanded.
 License: GPL-3
 URL: http://enricoschumann.net/ical.utils,
      https://github.com/enricoschumann/ical.utils
 Imports: textutils
+Suggests: tinytest, base64enc
