--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,21 @@
-Package: ical.utils
+Package: icalutils
 Type: Package
-Title: Read and Create iCalendar Files
+Title: Read, Process and Create iCalendar Data and Files
 Version: 0.1-0
-Date: 2019-10-28
+Date: 2019-10-29
 Authors@R: person("Enrico", "Schumann",
                   role  = c("aut", "cre"),
                   email = "es@enricoschumann.net",
                   comment = c(ORCID = "0000-0001-7601-6576"))
 Maintainer: Enrico Schumann <es@enricoschumann.net>
-Description: Utilities for handling ical data. The package is
-             written in pure R, with no strict dependencies
-             (package 'base64enc' is only needed if files have
-             attachments). The package maps iCalendar dates and
-             date-times to R's native 'Date' and 'POSIXct' classes.
-	     Recurring items can be expanded.
+Description: Utilities for handling icalendar data. The package
+             is written in pure R, with no strict dependencies
+             (package 'base64enc' is only needed if calendar
+             files have attachments). The package maps iCalendar
+             dates and date-times to R's native 'Date' and
+             'POSIXct' classes.  Recurring items can be expanded.
 License: GPL-3
-URL: http://enricoschumann.net/ical.utils,
-     https://github.com/enricoschumann/ical.utils
+URL: http://enricoschumann.net/icalutils,
+     https://github.com/enricoschumann/icalutils
 Imports: textutils
 Suggests: tinytest, base64enc
