Add function 'rrule'
Functions '.parse_rrule' and '.expand_rrule' are no
longer exported.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,7 @@
 export(
     "read_vevent",
     "read_vtimezone",
-    ".parse_rrule",
-    ".expand_rrule")
+    "rrule")
 
 importFrom("stats", "runif")
 importFrom("utils", "packageVersion")
