--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 export(
+    "read_icalendar",
     "read_vevent",
     "read_vtimezone",
     "rrule")
@@ -9,3 +10,5 @@ importFrom("utils", "packageVersion")
 importFrom("textutils", "fill_in")
 
 S3method("as.data.frame", "icalutils_vevent")
+
+S3method("print", "icalutils_icalendar")
