--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,22 +2,23 @@ Package: icalutils
 Type: Package
 Title: Read, Process and Create iCalendar Data and Files
 Version: 0.2-0
-Date: 2020-06-04
+Date: 2020-06-15
 Authors@R: c(person("Enrico", "Schumann",
                     role  = c("aut", "cre"),
                     email = "es@enricoschumann.net",
                     comment = c(ORCID = "0000-0001-7601-6576")),
              person("Unicode, Inc.", role = c("dtc", "cph")))
 Maintainer: Enrico Schumann <es@enricoschumann.net>
-Description: Utilities for handling icalendar data. The package
-             is written in pure R, with no strict dependencies
-             (package 'base64enc' is only needed if calendar
-             files have attachments). The package maps iCalendar
-             dates and date-times to R's native 'Date' and
-             'POSIXct' classes.  Recurring items can be expanded.
-             Timezones are supported.
+Description: Utilities for handling icalendar data, in
+  particular reading and creating/writing icalendar
+  files.  The package is written in pure R, with no
+  strict dependencies (package 'base64enc' is only
+  needed if calendar files have attachments).  The
+  package maps iCalendar dates and date-times to R's
+  native 'Date' and 'POSIXct' classes.  Recurring items
+  (such as birthdays) can be expanded.  Timezones are
+  supported.
 License: GPL-3
 URL: http://enricoschumann.net/R/packages/icalutils,
      https://github.com/enricoschumann/icalutils
-Imports: textutils
 Suggests: tinytest, base64enc
