--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ importFrom("utils", "packageVersion")
 
 S3method("as.data.frame", "icalendar")
 S3method("print", "icalendar")
+S3method(`[`, "icalendar")
