--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,21 +2,22 @@ Package: icalutils
 Type: Package
 Title: Read, Process and Create iCalendar Data and Files
 Version: 0.2-0
-Date: 2020-06-22
+Date: 2020-10-12
 Authors@R: c(person("Enrico", "Schumann",
                     role  = c("aut", "cre"),
                     email = "es@enricoschumann.net",
                     comment = c(ORCID = "0000-0001-7601-6576")),
              person("Unicode, Inc.", role = c("dtc", "cph")))
 Maintainer: Enrico Schumann <es@enricoschumann.net>
-Description: Utilities for handling iCalendar data, in particular
-  reading and creating/writing iCalendar files.  The package is
-  written in pure R, with no strict dependencies (package
-  'base64enc' is only needed if calendar files have attachments).
-  The package maps iCalendar dates and date-times to R's native
-  'Date' and 'POSIXct' classes.  Recurrance rules for repeated
-  items (such as birthdays) can be expanded into actual
-  occurances.  Timezones are supported.
+Description: Utilities for handling iCalendar data, in
+  particular reading and creating/writing iCalendar files.
+  The package is written in pure R, with no dependencies
+  (package 'base64enc' is only needed if calendar files have
+  attachments).  The package maps iCalendar dates and
+  date-times to R's native 'Date' and 'POSIXct' classes.
+  Recurrance rules for repeated items (such as birthdays)
+  can be expanded into actual occurance sets.  Timezones are
+  supported.
 License: GPL-3
 URL: http://enricoschumann.net/R/packages/icalutils,
      https://github.com/enricoschumann/icalutils
